# Comet

./: .gitignore  CONTRIBUTING.md  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tailwind.default.config.ts  tailwind.ronix.config.ts  vite.config.ts
.comet/: README.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
docs/: autoExecute.md  commandPalette.md  documentation.md  fastFlags.md  info.md  keybinds.md  workspaces.md
public/: Hydrogen-icon.icns  Ronix-icon.icns
public/resources/: api.js  installer.sh
raycast/comet/: README.md  eslint.config.js  package-lock.json  package.json
server/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
server/api/: fastFlags.ts  index.ts  installer.ts  messages.ts  package-lock.json  package.json  status.ts  tsconfig.json  unc.ts
server/src/: App.tsx  index.ts  main.tsx
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: active_profile.rs  auto_execute.rs  config.rs  detector.rs  execution_history.rs  executor.rs  fast_flags.rs  fast_flags_profiles.rs  flag_validator.rs  hydrogen.rs  key.rs  logging.rs  login_items.rs  main.rs  permissions.rs  roblox_logs.rs  rscripts.rs  suggestions.rs  tabs.rs  tray.rs  uninstall.rs  updater.rs  workspace.rs
src/components/: EditorActions.tsx  Library.tsx  Sidebar.tsx  Topbar.tsx  TrafficLights.tsx  (+8 more)
(+323 files in other folders)
