[package]
name = "Comet"
version = "1.0.0"
description = "A modern and minimalistic interface for Hydrogen executor."
authors = ["Frozen Productions"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "fs-read-dir", "fs-read-file", "fs-create-dir", "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.10.3"
notify="6.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
